unpackaged/objects/SFE_KPI_Target__c.object
<CustomObject>
  <description>Used to capture SFE KPI targets by country and region.</description>
  <fields>
    <fullName>Account_plans_for_50_HIGH_Vol_GROW__c</fullName>
    <inlineHelpText>Global Target is that all + 50 Implant &amp; High Volume GROW Customers should have an Account Plan. Please select Yes if your country's goal is to comply with this. Select No and describe the alternative target below otherwise</inlineHelpText>
    <label>Account plans for +50 &amp; HIGH Vol GROWs?</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Alternative_CFEs_Account_Plan_Acc_Target__c</fullName>
    <inlineHelpText>Please describe here the KPI target you want to suggest for your market in case it differs from the global target. Please also include a brief motivation.</inlineHelpText>
    <label>Alternative CFEs Account Plan Acc Target</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Alternative_CFEs_Red_Flagged_Acc_Target__c</fullName>
    <inlineHelpText>Please describe here the KPI target you want to suggest for your market in case it differs from the global target. Please also include a brief motivation.</inlineHelpText>
    <label>Alternative CFEs Red Flagged Acc Target</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Alternative_GET_Account_Plan_Target__c</fullName>
    <inlineHelpText>Please describe here the KPI target you want to suggest for your market in case it differs from the global target. Please also include a brief motivation.</inlineHelpText>
    <label>Alternative GET Account Plan Target</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Alternative_GROW_Account_Plan_Target__c</fullName>
    <inlineHelpText>Please describe here the KPI target you want to suggest for your market in case it differs from the global target. Please also include a brief motivation.</inlineHelpText>
    <label>Alternative GROW Account Plan Target</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>BELUX</fullName>
        </value>
        <value>
          <fullName>CA</fullName>
        </value>
        <value>
          <fullName>CH</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>DK</fullName>
        </value>
        <value>
          <fullName>FI</fullName>
        </value>
        <value>
          <fullName>FR</fullName>
        </value>
        <value>
          <fullName>IB</fullName>
        </value>
        <value>
          <fullName>IT</fullName>
        </value>
        <value>
          <fullName>JP</fullName>
        </value>
        <value>
          <fullName>NL</fullName>
        </value>
        <value>
          <fullName>NO</fullName>
        </value>
        <value>
          <fullName>PL</fullName>
        </value>
        <value>
          <fullName>RU</fullName>
        </value>
        <value>
          <fullName>SE</fullName>
        </value>
        <value>
          <fullName>UK</fullName>
        </value>
        <value>
          <fullName>US</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Daily_of_CFEs_CSR__c</fullName>
    <inlineHelpText>Minimum 4 CFEs/day</inlineHelpText>
    <label>Daily # of CFEs/ CSR</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Dashboards_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dashboards completed?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>EDUCATE_CFEs__c</fullName>
    <inlineHelpText>Of total 100% CFEs conducted by Clinical Sales Team, how big portion should be towards EDUCATE?</inlineHelpText>
    <label>% EDUCATE CFEs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>GET_CFEs__c</fullName>
    <inlineHelpText>Of total 100% CFEs conducted by Clinical Sales Team, how big portion should be towards GET?</inlineHelpText>
    <label>% GET CFEs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>GROW_CFEs__c</fullName>
    <inlineHelpText>Of total 100% CFEs conducted by Clinical Sales Team, how big portion should be towards GROW?</inlineHelpText>
    <label>% GROW CFEs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>KEEP_CFEs__c</fullName>
    <inlineHelpText>Of total 100% CFEs conducted by Clinical Sales Team, how big portion should be towards KEEP?</inlineHelpText>
    <label>% KEEP CFEs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Min_1_CFE_month_to_30_Red_Flagged_Cust__c</fullName>
    <inlineHelpText>Global Target is that all Red Flagged +30 Implant customers should be visited monthly . Please select Yes if your country's goal is to comply with this. Select No and describe the alternative target below otherwise</inlineHelpText>
    <label>Min 1 CFE/month to +30 Red Flagged Cust?</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Min_1_CFE_month_to_Account_Plan_Accounts__c</fullName>
    <inlineHelpText>Global Target is that all Account Plan Accounts should be visited monthly. Please select Yes if your country's goal is to comply with this. Select No and describe the alternative target below otherwise</inlineHelpText>
    <label>Min 1 CFE/month to Account Plan Acct's?</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Motivation_CFE_Division__c</fullName>
    <inlineHelpText>Enter here the rational behind your CFE division targets/Implant Account Strategy.
Targets to be set comparing with PY’s result, be motivated &amp; explained. 
Focus should be to steer teams towards Accounts which provides highest possible implant growth.</inlineHelpText>
    <label>Motivation: CFE Division</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Motivation_Daily_of_CFEs_CSR__c</fullName>
    <inlineHelpText>Enter here the rational behind your target for daily # of CFEs/ Clinical Sales Rep.</inlineHelpText>
    <label>Motivation: Daily # of CFEs/CSR</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Motivation_of_Implant_GROW_Opps__c</fullName>
    <label>Motivation: # of Implant GROW Opps</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>REFERRAL_CFEs__c</fullName>
    <inlineHelpText>Of total 100% CFEs conducted by Clinical Sales Team, how big portion should be towards REFERRAL?</inlineHelpText>
    <label>% REFERRAL CFEs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SFE_KPI_Targets_Approved_By__c</fullName>
    <label>SFE KPI Targets Approved By</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Oliver Betsch</fullName>
        </value>
        <value>
          <fullName>Anders Nordin</fullName>
        </value>
        <value>
          <fullName>Matthias Kühner</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SFE_KPI_Targets_Approved_Date__c</fullName>
    <label>SFE KPI Targets Approved Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>SFE_KPI_Targets_ready_to_be_submitted__c</fullName>
    <inlineHelpText>Please select No while working on defining the targets. Select Yes when you want to submit the targets for senior management review.</inlineHelpText>
    <label>SFE KPI Targets ready to be submitted</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>STARTER_CFEs__c</fullName>
    <inlineHelpText>Of total 100% CFEs conducted by Clinical Sales Team, how big portion should be towards STARTER?</inlineHelpText>
    <label>% STARTER CFEs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>TIME_MINIMIZE_CFEs__c</fullName>
    <inlineHelpText>Of total 100% CFEs conducted by Clinical Sales Team, how big portion should be towards TIME MINIMIZE?</inlineHelpText>
    <label>% TIME MINIMIZE CFEs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>X_of_IMPLANT_GET_Account_Plans_CSR__c</fullName>
    <inlineHelpText>Account Plans are defined on Opportunities of type Implant GET. Global target is MINIMUM  5 active GETs with High or Medium Volume potential.</inlineHelpText>
    <label># of IMPLANT GET Account Plans/CSR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>SFE KPI Target</label>
  <nameField>
    <label>SFE KPI Target Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>SFE KPI Targets</pluralLabel>
  <sharingModel>Private</sharingModel>
</CustomObject>